--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,40 @@
+body {
+  background-color: #d0b98d;
+  font-family: monospace;
+}
+
+label {
+  font-size: 20px;
+}
+
 #output {
   font-size: 3em;
+  color: #43b97f;
+  background-color: #000;
+  width: 25%;
+}
+
+.form-control {
+  display: block;
+  width: 25%;
+  height: 1.3em;
+  padding: 6px 12px;
+  font-size: 80px;
+  line-height: 2em;
+  color: #43b97f;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+       -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.btn {
+  background-color: #9e2920;
+  color: white;
+  font-size: 30px;
 }
